[project]
name = "maven-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.75.0",
    "beautifulsoup4>=4.14.3",
    "langfuse>=3.11.2",
    "openai>=2.14.0",
    "pinecone>=8.0.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "yagmail>=0.15.293",
]
